--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             <div class="container text-center">
                 <div class="row">
                   <div class="col">
-                    <img src="img/ar-con.jpg" alt="Ar Condicionado" class="geometria">
+                    <img src="img/ar-con.jpg" alt="Ar Condicionado" class="geometria" class="imagem-flutuante">
                   </div>
                   <div class="col">
-                    <img src="img/banner/placa-solar.jpg" alt="" class="geometria">
+                    <img src="img/banner/placa-solar.jpg" alt="Placa Solar" class="geometria" class="imagem-flutuante">
                   </div>
                   <div class="col">
-                    Column
+                    <img src="img/painel.jpg" alt="Painel eletrico" class="geometria" class="imagem-flutuante">
                   </div>
                 </div>
               </div>
