--- a/servico.html
+++ b/servico.html
@@ -1,37 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <!--Meta ADS-->
-    <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '906909197266652');
-        fbq('track', 'PageView');
-        fbq('track', 'Contact');
-        fbq('track', 'FindLocation');
-        fbq('track', 'Lead');
-        fbq('track', 'Schedule');
-        
-
-      </script>
-     <!--Meta ADS-->
-
-     <!--Google Analytics-->
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-96862694-1', 'auto');
-            ga('send', 'pageview');
-
-      </script>
-      <!--Google Analytics-->
+   
 
 <head>
     <meta charset="UTF-8">
@@ -56,8 +25,7 @@
                             <header>
                                 <!--cabeçalho-->
                                 <center>
-                                    <h1 class="title" class="animate__animated animate__backInDown"><strong><span>ID</span> Soluções</strong>
-                                    </h1>
+                                    <h1 class="title"><strong><span>ID</span> Soluções</strong></h1>
                                 </center>
                         
                                 <ul class="nav justify-content-center">
